kube_deploy/Stg/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dcs-app-stg
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: dcs-app-stg
    spec:
      containers:
        - name: data-capture-service
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/cica/cica-repo-dev:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3100
