kube_deploy/Stg/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dcs-service-stg
  labels:
    app: dcs-app-stg
spec:
  ports:
  - port: 80
    name: http
    targetPort: 3100
  selector:
    app: dcs-app-stg
